[workspace]
resolver = "2"

members = [
	"bridges/bin/runtime-common",
	"bridges/modules/grandpa",
	"bridges/modules/messages",
	"bridges/modules/parachains",
	"bridges/modules/relayers",
	"client/cli",
	"client/collator",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/proposer",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-interface",
	"client/relay-chain-minimal-node",
	"client/relay-chain-rpc-interface",
	"client/service",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/pallets/template",
	"parachain-template/runtime",
	"parachains/common",
	"parachains/integration-tests/emulated/assets/asset-hub-kusama",
	"parachains/integration-tests/emulated/assets/asset-hub-polkadot",
	"parachains/integration-tests/emulated/assets/asset-hub-westend",
	"parachains/integration-tests/emulated/bridges/bridge-hub-rococo",
	"parachains/integration-tests/emulated/collectives/collectives-polkadot",
	"parachains/integration-tests/emulated/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/assets/asset-hub-kusama",
	"parachains/runtimes/assets/asset-hub-polkadot",
	"parachains/runtimes/assets/asset-hub-westend",
	"parachains/runtimes/assets/common",
	"parachains/runtimes/assets/test-utils",
	"parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"parachains/runtimes/bridge-hubs/bridge-hub-polkadot",
	"parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"parachains/runtimes/bridge-hubs/test-utils",
	"parachains/runtimes/collectives/collectives-polkadot",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/glutton/glutton-kusama",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/test-utils",
	"parachains/runtimes/testing/penpal",
	"parachains/runtimes/testing/rococo-parachain",
	"polkadot-parachain",
	"primitives/aura",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
	"xcm/xcm-emulator",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch."https://github.com/paritytech/substrate"]
node-template = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node-template/node" }
frame-benchmarking = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/benchmarking" }
frame-support = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/support" }
frame-support-procedural = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/support/procedural/tools/derive" }
sp-api = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/api" }
sp-api-proc-macro = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/api/proc-macro" }
sp-core = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/core" }
sp-core-hashing = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/core/hashing" }
sp-debug-derive = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/debug-derive" }
sp-externalities = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/externalities" }
sp-std = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/std" }
sp-storage = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/storage" }
sp-runtime-interface = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/tracing" }
sp-wasm-interface = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/wasm-interface" }
sp-io = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/io" }
sp-keystore = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/keystore" }
sp-state-machine = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/state-machine" }
sp-panic-handler = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/panic-handler" }
sp-trie = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/trie" }
sp-runtime = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/runtime" }
sp-application-crypto = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/application-crypto" }
sp-arithmetic = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/arithmetic" }
sp-weights = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/weights" }
substrate-test-runtime-client = { path = "/Users/juanparity/Projects/paritytech/substrate/test-utils/runtime/client" }
sc-block-builder = { path = "/Users/juanparity/Projects/paritytech/substrate/client/block-builder" }
sc-client-api = { path = "/Users/juanparity/Projects/paritytech/substrate/client/api" }
substrate-prometheus-endpoint = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/prometheus" }
sc-executor = { path = "/Users/juanparity/Projects/paritytech/substrate/client/executor" }
sc-executor-common = { path = "/Users/juanparity/Projects/paritytech/substrate/client/executor/common" }
sc-allocator = { path = "/Users/juanparity/Projects/paritytech/substrate/client/allocator" }
sp-maybe-compressed-blob = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/maybe-compressed-blob" }
sc-executor-wasmtime = { path = "/Users/juanparity/Projects/paritytech/substrate/client/executor/wasmtime" }
sc-runtime-test = { path = "/Users/juanparity/Projects/paritytech/substrate/client/executor/runtime-test" }
substrate-wasm-builder = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/wasm-builder" }
sp-version = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/version" }
sp-core-hashing-proc-macro = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/core/hashing/proc-macro" }
sp-version-proc-macro = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/version/proc-macro" }
sc-tracing = { path = "/Users/juanparity/Projects/paritytech/substrate/client/tracing" }
sc-tracing-proc-macro = { path = "/Users/juanparity/Projects/paritytech/substrate/client/tracing/proc-macro" }
sp-blockchain = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/blockchain" }
sp-consensus = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/consensus/common" }
sp-inherents = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/inherents" }
sp-test-primitives = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/test-primitives" }
sp-database = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/database" }
sp-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/rpc" }
substrate-test-runtime = { path = "/Users/juanparity/Projects/paritytech/substrate/test-utils/runtime" }
frame-executive = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/executive" }
frame-system = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/system" }
frame-try-runtime = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/try-runtime" }
pallet-balances = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/balances" }
pallet-transaction-payment = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/transaction-payment" }
frame-system-rpc-runtime-api = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/system/rpc/runtime-api" }
pallet-babe = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/babe" }
pallet-authorship = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/authorship" }
pallet-session = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/session" }
pallet-timestamp = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/timestamp" }
sp-timestamp = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/timestamp" }
sp-session = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/session" }
sp-staking = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/staking" }
sp-consensus-babe = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/consensus/babe" }
sp-consensus-slots = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/consensus/slots" }
frame-election-provider-support = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/npos-elections" }
substrate-test-utils = { path = "/Users/juanparity/Projects/paritytech/substrate/test-utils" }
substrate-test-utils-derive = { path = "/Users/juanparity/Projects/paritytech/substrate/test-utils/derive" }
sc-service = { path = "/Users/juanparity/Projects/paritytech/substrate/client/service" }
sc-chain-spec = { path = "/Users/juanparity/Projects/paritytech/substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "/Users/juanparity/Projects/paritytech/substrate/client/chain-spec/derive" }
sc-network = { path = "/Users/juanparity/Projects/paritytech/substrate/client/network" }
sc-network-common = { path = "/Users/juanparity/Projects/paritytech/substrate/client/network/common" }
sc-consensus = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/common" }
sc-utils = { path = "/Users/juanparity/Projects/paritytech/substrate/client/utils" }
sp-consensus-grandpa = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/consensus/grandpa" }
sc-network-light = { path = "/Users/juanparity/Projects/paritytech/substrate/client/network/light" }
sc-network-sync = { path = "/Users/juanparity/Projects/paritytech/substrate/client/network/sync" }
fork-tree = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/fork-tree" }
sc-telemetry = { path = "/Users/juanparity/Projects/paritytech/substrate/client/telemetry" }
sc-client-db = { path = "/Users/juanparity/Projects/paritytech/substrate/client/db" }
sc-state-db = { path = "/Users/juanparity/Projects/paritytech/substrate/client/state-db" }
kitchensink-runtime = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node/runtime" }
frame-benchmarking-pallet-pov = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/benchmarking/pov" }
frame-system-benchmarking = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/system/benchmarking" }
node-primitives = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node/primitives" }
pallet-alliance = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/alliance" }
pallet-collective = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/collective" }
pallet-identity = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/identity" }
pallet-asset-conversion = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/asset-conversion" }
pallet-assets = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/assets" }
pallet-asset-conversion-tx-payment = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/transaction-payment/asset-conversion-tx-payment" }
pallet-asset-rate = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/asset-rate" }
pallet-asset-tx-payment = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/transaction-payment/asset-tx-payment" }
pallet-authority-discovery = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/authority-discovery" }
sp-authority-discovery = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/authority-discovery" }
pallet-bags-list = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/bags-list" }
pallet-bounties = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/bounties" }
pallet-treasury = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/treasury" }
pallet-utility = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/utility" }
pallet-root-testing = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/root-testing" }
pallet-child-bounties = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/child-bounties" }
pallet-contracts = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/contracts" }
pallet-contracts-primitives = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/contracts/primitives" }
pallet-contracts-proc-macro = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/contracts/proc-macro" }
pallet-insecure-randomness-collective-flip = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/insecure-randomness-collective-flip" }
pallet-proxy = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/proxy" }
pallet-conviction-voting = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/conviction-voting" }
pallet-scheduler = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/scheduler" }
pallet-preimage = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/preimage" }
pallet-core-fellowship = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/core-fellowship" }
pallet-democracy = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/democracy" }
pallet-election-provider-multi-phase = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/election-provider-multi-phase" }
pallet-election-provider-support-benchmarking = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/election-provider-support/benchmarking" }
pallet-elections-phragmen = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/elections-phragmen" }
pallet-fast-unstake = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/fast-unstake" }
pallet-staking = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/staking" }
pallet-staking-reward-curve = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/staking/reward-curve" }
pallet-glutton = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/glutton" }
pallet-grandpa = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/grandpa" }
pallet-offences = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/offences" }
sp-keyring = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/keyring" }
pallet-im-online = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/im-online" }
pallet-indices = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/indices" }
pallet-lottery = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/lottery" }
frame-support-test = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/support/test" }
frame-support-test-pallet = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/support/test/pallet" }
pallet-membership = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/membership" }
pallet-message-queue = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/message-queue" }
pallet-mmr = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/merkle-mountain-range" }
pallet-multisig = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/multisig" }
pallet-nft-fractionalization = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nft-fractionalization" }
pallet-nfts = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nfts" }
pallet-nfts-runtime-api = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nfts/runtime-api" }
pallet-nis = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nis" }
pallet-nomination-pools = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nomination-pools" }
pallet-nomination-pools-benchmarking = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nomination-pools/benchmarking" }
pallet-nomination-pools-runtime-api = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nomination-pools/runtime-api" }
pallet-offences-benchmarking = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/offences/benchmarking" }
pallet-ranked-collective = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/ranked-collective" }
pallet-recovery = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/recovery" }
pallet-referenda = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/referenda" }
pallet-remark = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/remark" }
pallet-salary = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/salary" }
pallet-session-benchmarking = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/session/benchmarking" }
pallet-society = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/society" }
pallet-staking-runtime-api = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/staking/runtime-api" }
pallet-state-trie-migration = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/state-trie-migration" }
frame-remote-externalities = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/remote-externalities" }
substrate-rpc-client = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/rpc/client" }
sc-rpc-api = { path = "/Users/juanparity/Projects/paritytech/substrate/client/rpc-api" }
sc-transaction-pool-api = { path = "/Users/juanparity/Projects/paritytech/substrate/client/transaction-pool/api" }
substrate-state-trie-migration-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/rpc/state-trie-migration-rpc" }
pallet-statement = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/statement" }
sp-statement-store = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/statement-store" }
pallet-sudo = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/sudo" }
pallet-tips = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/tips" }
pallet-transaction-payment-rpc-runtime-api = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-storage = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/transaction-storage" }
sp-transaction-storage-proof = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/transaction-storage-proof" }
pallet-uniques = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/uniques" }
pallet-vesting = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/vesting" }
pallet-whitelist = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/whitelist" }
sp-block-builder = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/block-builder" }
sp-offchain = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/offchain" }
sp-transaction-pool = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/transaction-pool" }
sc-informant = { path = "/Users/juanparity/Projects/paritytech/substrate/client/informant" }
sc-keystore = { path = "/Users/juanparity/Projects/paritytech/substrate/client/keystore" }
sc-network-bitswap = { path = "/Users/juanparity/Projects/paritytech/substrate/client/network/bitswap" }
sc-network-transactions = { path = "/Users/juanparity/Projects/paritytech/substrate/client/network/transactions" }
sc-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/client/rpc" }
sc-transaction-pool = { path = "/Users/juanparity/Projects/paritytech/substrate/client/transaction-pool" }
substrate-test-runtime-transaction-pool = { path = "/Users/juanparity/Projects/paritytech/substrate/test-utils/runtime/transaction-pool" }
sc-rpc-server = { path = "/Users/juanparity/Projects/paritytech/substrate/client/rpc-servers" }
sc-rpc-spec-v2 = { path = "/Users/juanparity/Projects/paritytech/substrate/client/rpc-spec-v2" }
sc-sysinfo = { path = "/Users/juanparity/Projects/paritytech/substrate/client/sysinfo" }
sp-consensus-aura = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/consensus/aura" }
sp-genesis-builder = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/genesis-builder" }
substrate-test-client = { path = "/Users/juanparity/Projects/paritytech/substrate/test-utils/client" }
sc-offchain = { path = "/Users/juanparity/Projects/paritytech/substrate/client/offchain" }
sp-runtime-interface-test-wasm = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/runtime-interface/test-wasm" }
sp-metadata-ir = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/metadata-ir" }
frame-benchmarking-cli = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/benchmarking-cli" }
sc-cli = { path = "/Users/juanparity/Projects/paritytech/substrate/client/cli" }
node-template-runtime = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node-template/runtime" }
pallet-aura = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/aura" }
pallet-template = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/transaction-payment/rpc" }
sc-basic-authorship = { path = "/Users/juanparity/Projects/paritytech/substrate/client/basic-authorship" }
sc-proposer-metrics = { path = "/Users/juanparity/Projects/paritytech/substrate/client/proposer-metrics" }
sc-consensus-aura = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/aura" }
sc-consensus-slots = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/slots" }
sc-network-test = { path = "/Users/juanparity/Projects/paritytech/substrate/client/network/test" }
sc-consensus-grandpa = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/grandpa" }
sc-network-gossip = { path = "/Users/juanparity/Projects/paritytech/substrate/client/network-gossip" }
substrate-frame-rpc-system = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/rpc/system" }
try-runtime-cli = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/try-runtime/cli" }
substrate-cli-test-utils = { path = "/Users/juanparity/Projects/paritytech/substrate/test-utils/cli" }
node-cli = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node/cli" }
node-executor = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node/executor" }
node-testing = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node/testing" }
node-inspect = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node/inspect" }
node-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node/rpc" }
mmr-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/client/merkle-mountain-range/rpc" }
sc-consensus-babe = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/epochs" }
sc-consensus-babe-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/babe/rpc" }
sc-consensus-grandpa-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/client/sync-state-rpc" }
sc-authority-discovery = { path = "/Users/juanparity/Projects/paritytech/substrate/client/authority-discovery" }
sc-network-statement = { path = "/Users/juanparity/Projects/paritytech/substrate/client/network/statement" }
sc-statement-store = { path = "/Users/juanparity/Projects/paritytech/substrate/client/statement-store" }
sc-storage-monitor = { path = "/Users/juanparity/Projects/paritytech/substrate/client/storage-monitor" }
sc-service-test = { path = "/Users/juanparity/Projects/paritytech/substrate/client/service/test" }
substrate-build-script-utils = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/build-script-utils" }
substrate-frame-cli = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/frame-utilities-cli" }
node-bench = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/node/bench" }
chain-spec-builder = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/utils/chain-spec-builder" }
subkey = { path = "/Users/juanparity/Projects/paritytech/substrate/bin/utils/subkey" }
sc-consensus-beefy = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/beefy" }
sp-consensus-beefy = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/beefy/rpc" }
sc-consensus-manual-seal = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/manual-seal" }
sc-consensus-pow = { path = "/Users/juanparity/Projects/paritytech/substrate/client/consensus/pow" }
sp-consensus-pow = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/consensus/pow" }
mmr-gadget = { path = "/Users/juanparity/Projects/paritytech/substrate/client/merkle-mountain-range" }
pallet-atomic-swap = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/atomic-swap" }
pallet-bags-list-fuzzer = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/bags-list/fuzzer" }
pallet-bags-list-remote-tests = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/bags-list/remote-tests" }
pallet-beefy = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/beefy" }
pallet-beefy-mmr = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/beefy-mmr" }
binary-merkle-tree = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/binary-merkle-tree" }
pallet-election-provider-e2e-test = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/election-provider-multi-phase/test-staking-e2e" }
frame-election-solution-type-fuzzer = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/election-provider-support/solution-type/fuzzer" }
pallet-examples = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/examples" }
pallet-default-config-example = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/examples/default-config" }
pallet-dev-mode = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/examples/dev-mode" }
pallet-example-basic = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/examples/basic" }
pallet-example-kitchensink = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/examples/kitchensink" }
pallet-example-offchain-worker = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/examples/offchain-worker" }
pallet-example-split = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/examples/split" }
pallet-nicks = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nicks" }
pallet-node-authorization = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/node-authorization" }
pallet-nomination-pools-fuzzer = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nomination-pools/fuzzer" }
pallet-nomination-pools-test-staking = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/nomination-pools/test-staking" }
pallet-paged-list = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/paged-list" }
pallet-paged-list-fuzzer = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/paged-list/fuzzer" }
pallet-scored-pool = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/scored-pool" }
pallet-staking-reward-fn = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/staking/reward-fn" }
pallet-root-offences = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/root-offences" }
frame-support-test-compile-pass = { path = "/Users/juanparity/Projects/paritytech/substrate/frame/support/test/compile_pass" }
sp-api-test = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/api/test" }
sp-application-crypto-test = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/arithmetic/fuzzer" }
sp-crypto-ec-utils = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/crypto/ec-utils" }
sp-npos-elections-fuzzer = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated = { path = "/Users/juanparity/Projects/paritytech/substrate/primitives/runtime-interface/test-wasm-deprecated" }
node-template-release = { path = "/Users/juanparity/Projects/paritytech/substrate/scripts/ci/node-template-release" }
substrate-test-utils-test-crate = { path = "/Users/juanparity/Projects/paritytech/substrate/test-utils/test-crate" }
substrate-frame-rpc-support = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/rpc/support" }
generate-bags = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/generate-bags" }
node-runtime-generate-bags = { path = "/Users/juanparity/Projects/paritytech/substrate/utils/frame/generate-bags/node-runtime" }
substrate = { path = "/Users/juanparity/Projects/paritytech/substrate" }
