[package]
name = "cumulus-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-consensus = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-inherents = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-client-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-cli = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }

# Polkadot dependencies
polkadot-collator = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
polkadot-service = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
polkadot-parachain = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
polkadot-primitives = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
polkadot-validation = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }

# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-network = { path = "../network" }
cumulus-primitives = { path = "../primitives" }
cumulus-runtime = { path = "../runtime" }

# Other dependencies
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.9"

[dev-dependencies]
# Cumulus dependencies
test-runtime = { package = "cumulus-test-runtime", path = "../test/runtime" }
test-client = { package = "cumulus-test-client", path = "../test/client" }

# Substrate dependencies
substrate-test-client = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-keyring = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-state-machine = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }

# Polkadot dependencies
polkadot-service = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }

# Other dependencies
env_logger = "0.7.1"
