[package]
name = "cumulus-consensus"
description = "Proxy Polkadot's consensus as a consensus engine for Substrate"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# substrate deps
sc-client-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-consensus = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-inherents = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-block-builder = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
substrate-prometheus-endpoint = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }

# polkadot deps
polkadot-primitives = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
polkadot-runtime = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }

# other deps
futures = { version = "0.3.1", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
log = "0.4"
