[package]
name = "cumulus-message-broker"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "ser-tmp-rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "ser-tmp-rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "ser-tmp-rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "ser-tmp-rococo-v1" }

# Other dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ], default-features = false }

# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }
cumulus-parachain-upgrade = { path = "../parachain-upgrade", default-features = false }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-inherents/std",
	"cumulus-primitives/std",
	"cumulus-parachain-upgrade/std",
	"sp-std/std"
]
